// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validate the wordListCompiler a simple hunspell dictionary depth 0 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler a simple hunspell dictionary depth 1 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler compiling to a file without split 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler legacy splitting lines AVGAspect 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler legacy splitting lines AppendIterator::getArrayIterator 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler legacy splitting lines Austin Martin 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler legacy splitting lines CURLcode 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler legacy splitting lines CURLs CURLing 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler legacy splitting lines DIRs 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler legacy splitting lines DNSTable Lookup 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler legacy splitting lines JPEGsBLOBs 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler legacy splitting lines Namespace DNSLookup 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler legacy splitting lines New York 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler legacy splitting lines OUTRing 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler legacy splitting lines OUTRings 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler legacy splitting lines apd_get_active_symbols 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler legacy splitting lines hello 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler legacy splitting lines kDNSServiceErr_BadSig 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler legacy splitting lines well-educated 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "# cspell-tools:no-split
Austin Martin" true true 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "--abort-on-uncaught-exception" true true 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "AVGAspect" true true 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "AppendIterator::getArrayIterator" true true 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "Austin Martin # Proper name " false false 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "Austin Martin # Proper name " true false 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "Austin Martin # Proper name" false true 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "Austin Martin" true true 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "CURLcode" true true 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "CURLs CURLing" true true 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "DIRs" true true 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "DNSTable Lookup" true true 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "El Niño" true true 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "El Niño" true true 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "English" true false 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "English" true true 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "JPEGsBLOBs" true true 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "Namespace DNSLookup" true true 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "New York" false true 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "New York" true true 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "OUTRing" true true 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "OUTRings" true true 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "apd_get_active_symbols" true true 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "café" true false 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "corner café" true true 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "corner café̄" false true 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "corner café̄" true true 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "corner café" true true 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "hello" true true 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "kDNSServiceErr_BadSig" true true 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer line splitting "well-educated" true true 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer uses legacy line splitting AVGAspect 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer uses legacy line splitting AppendIterator::getArrayIterator 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer uses legacy line splitting Austin Martin 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer uses legacy line splitting CURLcode 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer uses legacy line splitting CURLs CURLing 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer uses legacy line splitting DIRs 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer uses legacy line splitting DNSTable Lookup 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer uses legacy line splitting JPEGsBLOBs 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer uses legacy line splitting Namespace DNSLookup 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer uses legacy line splitting New York 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer uses legacy line splitting OUTRing 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer uses legacy line splitting OUTRings 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer uses legacy line splitting apd_get_active_symbols 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer uses legacy line splitting hello 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer uses legacy line splitting kDNSServiceErr_BadSig 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler normalizer uses legacy line splitting well-educated 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler reading and normalizing a file 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler reading and normalizing to a trie file 1`] = `
{
  "error": "",
  "log": "Reading Words into Trie
Reduce duplicate word endings
Writing to file cities.trie
Done writing to file cities.trie",
}
`;

exports[`Validate the wordListCompiler reading and normalizing to a trie gz file 1`] = `
{
  "error": "",
  "log": "Reading Words into Trie
Reduce duplicate word endings
Writing to file cities.trie.gz
Done writing to file cities.trie.gz",
}
`;

exports[`Validate the wordListCompiler splitLine 'db2_client_info' 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler splitLine AppendIterator::__construct 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler splitLine Event: 'SIGINT' 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler splitLine MongoDB\\Driver\\Server::getLatency 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler splitLine New York 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler splitLine Numbers 128 0x0 0o37 65001 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler splitLine Rav4 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler splitLine array_intersect_assoc 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler splitLine db2_client_info 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler splitLine don't 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler splitLine hello 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler splitLine socket.connect(options[, connectListener]) 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler tests normalized to a trie 1`] = `
{
  "error": "",
  "log": "",
}
`;
